Reworked Architecture, Attached Poke API
Did a complete overhaul of App Component architecture to accommodate services and anticipate routing. Attached PokeAPI as a stable and well-documented fill-in for a Seed API.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,16 @@
 
-<app-navigation></app-navigation>
+<app-navbar></app-navbar>
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col-4">
+    <div class="col-5">
     <app-seed-shelf></app-seed-shelf>
-  </div>
-  <div class="col-8">
+    <app-seed-search></app-seed-search>
+    </div>
+  <div class="col-7">
     <app-seed-detail-viewer></app-seed-detail-viewer>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-    <app-seed-library></app-seed-library>
-  </div>
-</div>
 </div>
 
