--- a/src/app/seed-shelf/seed-shelf.component.html
+++ b/src/app/seed-shelf/seed-shelf.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <h1>SeedShelf Works</h1>
-  <app-seed-list></app-seed-list>
+      <p>Uhhhhhh....</p>
   <button class="btn btn-success">Here's a Button</button>
 </div>
 
