--- a/src/styles.css
+++ b/src/styles.css
@@ -13,4 +13,39 @@
   --taskGold: #E4AC5B;
   --bedDarkBrown: #BA5421;
   --calendarBlue: #42ADD0;
+
+  --appManilla: #ecd7a6;
+
+  background-color: var(--appManilla);
+}
+
+.btn-seedstory {
+  color: black;
+  background-color: var(--ssGold);
+  border-radius: 10rem;
+}
+
+.btn-seedstory:hover {
+  box-shadow: inset 0 0 0 20rem var(--taskGold);
+}
+
+.btn-seedstory:active {
+  box-shadow: inset 0 0 0 20rem var(--ssLightGreen),
+}
+
+.btn-seedstory:focus {
+    outline: none;
+    border-color: var(--ssLightGreen);
+    box-shadow: 0 0 0 3px var(--ssMidGreen);
+}
+
+.btn-seedstory:disabled,
+.btn-seedstory.is-disabled {
+  opacity: .5;
+}
+
+.form-control:focus {
+    outline: none;
+    border-color: var(--ssLightGreen);
+    box-shadow: 0 0 0 3px var(--ssMidGreen);
 }
