Adds Method for Images, Implements Routing
Fairly large update which pulls images of selected seeds, and implements routing to switch pages.

--- a/src/app/seed-shelf/seed-shelf.component.html
+++ b/src/app/seed-shelf/seed-shelf.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
   <h1>SeedShelf Works</h1>
-      <p>Uhhhhhh....</p>
+    <div class="jumbotron">
+      <h2>Name</h2>
+      <h3>Variety</h3>
+    </div>
   <button class="btn btn-success">Here's a Button</button>
 </div>
 
