--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
 
 .btn-seedstory {
   color: black;
-  background-color: var(--ssGold);
+  background-color: var(--ssMidGreen);
   border-radius: 10rem;
 }
 
