--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-
 <app-navbar></app-navbar>
 <div class="container-fluid">
 
   <div class="row">
     <div class="col-5">
-    <app-seed-shelf></app-seed-shelf>
-    <app-seed-search></app-seed-search>
+      <router-outlet></router-outlet>
     </div>
   <div class="col-7">
     <app-seed-detail-viewer></app-seed-detail-viewer>
