--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: var(--ssLightGreen)">
-  <a class="navbar-brand" href="#">Get SeedStory</a>
+  <a class="navbar-brand" href="http://seedstory.app">Get SeedStory</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#" (click)="onSelect('shelf')">My SeedShelf</a>
-      <a class="nav-item nav-link" href="#" (click)="onSelect('library')">Global Library</a>
-      <a class="nav-item nav-link" href="#">Log Out</a>
+      <a class="nav-item nav-link" routerLink="/shelf">My SeedShelf</a>
+      <a class="nav-item nav-link" routerLink="/search">Global Library</a>
+      <a class="nav-item nav-link" routerLink="/login">Log Out</a>
     </div>
   </div>
 </nav>
