--- a/src/app/seed-search/seed-search.component.html
+++ b/src/app/seed-search/seed-search.component.html
@@ -1,28 +1,42 @@
-<h1>Search Global Seeds:</h1>
-
-<div class="card mb-4 shadow-sm" *ngFor="let seed of seedResults">
-  <div class="row card-body">
-    <div class="col-8">
-      <h2 class="card-title" style="font-size: 1.5rem;">{{seed.type}} {{seed.variety}}</h2>
-      <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
-        {{seed.isOrganic ? "Certified Organic" : "Not Organic"}}
-      </p>
-      <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{seed.origin}}</p>
-      <p class="card-text" style="font-size: 1rem;">Debug only ID: {{seed.debugField}}</p>
-    </div>
-    <div class="col-4">
-      <img src="{{seed.imgURL}}" alt="{{seed.type}}" class="img-fluid" style="height:100%; align-self:auto;">
-    </div>
-  </div>
-  <div class="card-footer">
-    <button class="btn btn-seedstory float-right" style="width: 30%;">
-      Add to Collection
-    </button>
-  </div>
+<div class="card-body">
+  <div class="card-title">
+    <h1>Search Global Seeds:</h1>
+      <div class="input-group col-12">
+        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+          aria-describedby="search-addon" />
+        <button type="button" class="btn btn-seedstory">Search</button>
+      </div>
 </div>
 
-<div class="input-group col-7">
-  <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-    aria-describedby="search-addon" />
-  <button type="button" class="btn btn-seedstory">Search</button>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="card mb-4 shadow-sm" *ngFor="let seed of seedResults">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-8">
+              <h2 class="card-title" style="font-size: 1.5rem;">{{seed.type}} {{seed.variety}}</h2>
+              <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
+                {{seed.isOrganic ? "Certified Organic" : "Not Organic"}}
+              </p>
+              <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{seed.origin}}</p>
+              <p class="card-text" style="font-size: 1rem;">Debug only ID: {{seed.debugField}}</p>
+            </div>
+            <div class="col-4">
+              <img src="{{seed.imgURL}}" alt="{{seed.type}}" class="img-fluid" style="height:100%; align-self:auto;">
+            </div>
+          </div>
+          <div class="card-footer">
+            <button
+            class="btn btn-seedstory float-right"
+            style="width: 30%;"
+            (click)="onAddSeed(this.seed)">
+              Add to Collection
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
