--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@
   --appManilla: #ecd7a6;
   --appGreen: #c4f9a6;
 
-  background-color: var(--appManilla);
+  background-color: var(--ssLightGreen);
 }
 
 .btn-seedstory {
