Correctly implementing Routes from SeedShelf
SeedShelf now correctly using router functionality.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: var(--ssLightGreen)">
   <a class="navbar-brand" href="http://seedstory.app">Get SeedStory</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+<!-- //IDK, Maybe a drop Menu button here. -->
+
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/shelf">My SeedShelf</a>
-      <a class="nav-item nav-link" routerLink="/search">Global Library</a>
-      <a class="nav-item nav-link" routerLink="/login">Log Out</a>
+      <a class="nav-item nav-link" routerLink="/shelf" routerLinkActive="active">My SeedShelf</a>
+      <a class="nav-item nav-link" routerLink="/search" routerLinkActive="active">Global Library</a>
+      <a class="nav-item nav-link" routerLink="/login" routerLinkActive="active">Log Out</a>
     </div>
   </div>
 </nav>
