--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<router-outlet></router-outlet>
 
+<!-- <div class="container-fluid">
   <div class="row">
     <div class="col-5">
       <router-outlet></router-outlet>
     </div>
-  <div class="col-7">
-    <app-seed-detail-viewer></app-seed-detail-viewer>
+    <div class="col-7">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
+</div> -->
 
-</div>
+
+
 
