--- a/src/app/seed-detail-viewer/seed-detail-viewer.component.html
+++ b/src/app/seed-detail-viewer/seed-detail-viewer.component.html
@@ -1,6 +1,12 @@
-<div class="container-fluid">
+<div class="container">
   <h1>Seed Detail Viewer</h1>
-  <div class="container my-4">
+  <div *ngIf="seed">
+    <!-- <app-seed-search></app-seed-search> -->
+
+
+    <app-seed-on-shelf></app-seed-on-shelf>
+
+  <!-- <div class="container my-4">
     <div class="card">
       <img src="{{displayedSeed.imgURL}}" class="card-img-top" alt="{{displayedSeed.type}}" style="object-fit: contain; height: 300px;">
       <div class="card-body">
@@ -13,6 +19,6 @@
         <li class="list-group-item">Amount: {{displayedSeed.amount}}</li>
         <li class="list-group-item">Date Added: {{displayedSeed.dateAdded}}</li>
       </ul>
+    </div> -->
     </div>
-  </div>
 </div>
