--- a/src/app/seed-shelf/seed-shelf.component.html
+++ b/src/app/seed-shelf/seed-shelf.component.html
@@ -1,34 +1,69 @@
-<div class="container">
-  <h1>My SeedShelf</h1>
-  <div class="card mb-4 shadow-sm" *ngFor="let seed of seedCollection; let i = index">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-8">
-          <h2 class="card-title" style="font-size: 1.5rem;">{{seed.type}} {{seed.variety}}</h2>
-          <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
-            {{seed.isOrganic ? "Certified Organic" : "Not Organic"}}
-          </p>
-          <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{seed.origin}}</p>
-          <p class="card-text" style="font-size: 1rem;">Debug only ID: {{seed.debugField}}</p>
-        </div>
-        <div class="col-4">
-          <img src="{{seed.imgURL}}" alt="{{seed.type}}" class="img-fluid" style="height:100%; align-self:auto;">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-5">
+      <h2>My SeedShelf:</h2>
+      <div class="card mb-4 shadow-sm" *ngFor="let seed of seedCollection; let i = index">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-8">
+              <h2 class="card-title" style="font-size: 1.5rem;">{{seed.type}} {{seed.variety}}</h2>
+              <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
+                {{seed.isOrganic ? "Certified Organic" : "Not Organic"}}
+              </p>
+              <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{seed.origin}}</p>
+              <p class="card-text" style="font-size: 1rem;">Debug only ID: {{seed.debugField}}</p>
+            </div>
+            <div class="col-4">
+              <img src="{{seed.imgURL}}" alt="{{seed.type}}" class="img-fluid" style="height:100%; align-self:auto;">
+            </div>
+          </div>
+          <div class="card-footer">
+            <a>
+              <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onGetSpecificSeed(i)">
+                View in Detail
+              </button>
+            </a>
+            <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onRemoveSeed(i)">
+              Remove From Shelf
+            </button>
+          </div>
         </div>
       </div>
-      <div class="card-footer">
-        <button
-        class="btn btn-seedstory float-right"
-        style="width: 30%;"
-        (click)="onRemoveSeed(i)">
-          Remove From Shelf
-        </button>
-        <button
-        class="btn btn-seedstory float-left"
-        style="width: 30%;"
-         (click)="onGetSpecificSeed(i)">
-          View in Detail
-        </button>
-      </div>
+
+    </div>
+    <div class="col-7">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
+
+<!-- <div class="container">
+  <h2>My SeedShelf:</h2>
+  <div class="card mb-4 shadow-sm" *ngFor="let seed of seedCollection; let i = index">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-8">
+            <h2 class="card-title" style="font-size: 1.5rem;">{{seed.type}} {{seed.variety}}</h2>
+            <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
+              {{seed.isOrganic ? "Certified Organic" : "Not Organic"}}
+            </p>
+            <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{seed.origin}}</p>
+            <p class="card-text" style="font-size: 1rem;">Debug only ID: {{seed.debugField}}</p>
+          </div>
+          <div class="col-4">
+            <img src="{{seed.imgURL}}" alt="{{seed.type}}" class="img-fluid" style="height:100%; align-self:auto;">
+          </div>
+        </div>
+        <div class="card-footer">
+        <a [routerLink]="['/shelf', { outlets: { right: ['seed-detail', i] } }]">
+          <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onGetSpecificSeed(i)">
+            View in Detail
+          </button>
+        </a>
+          <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onRemoveSeed(i)">
+            Remove From Shelf
+          </button>
+        </div>
+      </div>
+    </div>
+</div> -->
