Big refactor for routing SeedSearch
Corrected Routing and Display
Outsourced logic to SeedService
Found Annoying Error with duplicate components

--- a/src/app/seed-search/seed-from-search/seed-from-search.component.html
+++ b/src/app/seed-search/seed-from-search/seed-from-search.component.html
@@ -1,9 +1,8 @@
-<p>seed-from-search works!</p>
 <div class="container">
   <h2>Detailed Seed Info:</h2>
   <p>Just literally anything</p>
 
-  <div class="card mb-4 shadow-sm" *ngIf="specificSeed; else noSeedInfo">
+  <div class="card mb-4 shadow-sm" *ngIf="specificSeed">
     <div class="card-body">
       <div class="row">
         <div class="col-8">
