--- a/src/app/seed-search/seed-search.component.html
+++ b/src/app/seed-search/seed-search.component.html
@@ -33,7 +33,7 @@
                 <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onAddSeed(this.seed)">
                   Add to Collection
                 </button>
-                <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onDisplayFromSearch(i)">
+                <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onDisplayFromSearch(seed.uid)">
                   View in Detail
                 </button>
               </div>
