--- a/src/app/seed-shelf/seed-on-shelf/seed-on-shelf.component.html
+++ b/src/app/seed-shelf/seed-on-shelf/seed-on-shelf.component.html
@@ -1,7 +1,5 @@
 <div class="container">
   <h2>Detailed Seed Info:</h2>
-    <p>Just literally anything</p>
-
     <div class="card mb-4 shadow-sm" *ngIf="specificSeed; else noSeedInfo">
       <div class="card-body">
         <div class="row">
@@ -19,6 +17,9 @@
           </div>
         </div>
         <div class="card-footer">
+          <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onEditSeed()">
+            Edit Seed
+          </button>
           <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onRemoveSeed(id)">
             Remove From Shelf
           </button>
@@ -26,6 +27,7 @@
       </div>
     </div>
 </div>
+<router-outlet></router-outlet>
 <ng-template #noSeedInfo>
   No Seed Has been Selected
 </ng-template>
