Learned some Things About Routing
Particularly what child routes see when they view this.route (spoilers, it's not what you might think...)

--- a/src/app/seed-shelf/seed-on-shelf/edit-seed-on-shelf/edit-seed-on-shelf.component.html
+++ b/src/app/seed-shelf/seed-on-shelf/edit-seed-on-shelf/edit-seed-on-shelf.component.html
@@ -1,4 +1,7 @@
-<div class="container" *ngIf="this.specificSeed">
+<div class="container">
+<button type="button" class="btn btn-danger" (click)="debugId()">Call for id</button>
+</div>
+<div class="container" *ngIf="this.specificSeed !== undefined">
   <form [formGroup]="editForm" (ngSubmit)="onSubmit()" >
     <div class="form-group">
       <label for="uid">UID</label>
