--- a/src/app/seed-shelf/seed-on-shelf/seed-on-shelf.component.html
+++ b/src/app/seed-shelf/seed-on-shelf/seed-on-shelf.component.html
@@ -1,31 +1,69 @@
 <div class="container">
   <h2>Detailed Seed Info:</h2>
-    <div class="card mb-4 shadow-sm" *ngIf="specificSeed; else noSeedInfo">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-8">
-            <h2 class="card-title" style="font-size: 1.5rem;">{{specificSeed.type}} {{specificSeed.variety}}</h2>
-            <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">
-              {{specificSeed.isOrganic ? "Certified Organic" : "Not Organic"}}
-            </p>
-            <p class="card-subtitle mb-2 text-muted" style="font-size: 1rem;">{{specificSeed.origin}}</p>
-            <p class="card-text" style="font-size: 1rem;">Debug only ID: {{specificSeed.debugField}}</p>
-          </div>
-          <div class="col-4">
-            <img src="{{specificSeed.imgURL}}" alt="{{specificSeed.type}}" class="img-fluid"
-              style="height:100%; align-self:auto;">
-          </div>
+  <div class="card mb-4 shadow-sm" *ngIf="specificSeed; else noSeedInfo">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-8">
+          <h2 class="card-title" style="font-size: 1.5rem;">{{specificSeed.commonBroad[0]}} '{{ specificSeed.variety + (specificSeed.subvariety ? ' ' + specificSeed.subvariety : '') }}'  <b>{{ specificSeed.hybridStatus || '' }}</b></h2>
+          <p class="card-subtitle mb-2 text-muted" style="font-style: italic; font-size: 1rem;">
+            {{specificSeed.genus}}  {{specificSeed.species}} {{ specificSeed.subspecies || '' }}
+          </p>
+          <p class="card-text" style="font-size: 1rem;">Debug only ID: {{specificSeed.uid}}</p>
+
+          <!-- Displaying other properties dynamically -->
+          <ng-container>
+            <h3 class="card-text" style="font-size: 1rem;">Formal Taxonomy</h3>
+            <ul>
+              <li class="card-text" style="font-size: 1rem;">Genus: {{specificSeed.genus}}</li>
+                <ul>
+                <li class="card-text" style="font-size: 1rem;">Species: {{specificSeed.species}}</li>
+                    <ul *ngIf="specificSeed.subspecies">
+                    <li class="card-text" style="font-size: 1rem;">Subspecies: {{specificSeed.subspecies}}</li>
+                    </ul>
+                </ul>
+              </ul>
+              <h3 class="card-text" style="font-size: 1rem;">Variety Information</h3>
+              <ul>
+              <li class="card-text" style="font-size: 1rem;">Variety: {{specificSeed.variety}}</li>
+              <ul *ngIf="specificSeed.subvariety">
+              <li class="card-text" style="font-size: 1rem;">Subvariety: {{specificSeed.subvariety}}</li>
+              </ul>
+            </ul>
+            <ul *ngIf="specificSeed.hybridStatus">
+            <li class="card-text" style="font-size: 1rem;">Hyrbid Status: {{specificSeed.hybridStatus}}</li>
+            </ul>
+
+              <div>
+              <h3 class="card-text" style="font-size: 1rem;">Common Names:</h3>
+              <p>{{specificSeed.commonBroad.join(', ')}}</p>
+              </div>
+
+              <div *ngIf="specificSeed.commonNarrow" >
+              <h3 class="card-text" style="font-size: 1rem;">Also Known As:</h3>
+              <p>{{specificSeed.commonNarrow.join(', ')}}</p>
+              </div>
+
+          </ng-container>
+
+
         </div>
-        <div class="card-footer">
-          <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onEditSeed()">
-            Edit Seed
-          </button>
-          <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onRemoveSeed(id)">
-            Remove From Shelf
-          </button>
+        <div class="col-4 d-flex align-items-center justify-content-center">
+
+          <img src="{{specificSeed.imgURL}}" alt="{{specificSeed.genus}} {{specificSeed.variety}}" class="img-fluid"
+            style="height:100%; width:100%; object-fit: contain;">
+
         </div>
       </div>
+      <div class="card-footer">
+        <button class="btn btn-seedstory float-left" style="width: 30%;" (click)="onEditSeed()">
+          Edit Seed
+        </button>
+        <button class="btn btn-seedstory float-right" style="width: 30%;" (click)="onRemoveSeed(id)">
+          Remove From Shelf
+        </button>
+      </div>
     </div>
+  </div>
 </div>
 <router-outlet></router-outlet>
 <ng-template #noSeedInfo>
