Add Seed Record Template
Broke some things, fixed some things, added a shiny new component.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,13 @@
 <!-- //IDK, Maybe a drop Menu button here. -->
 
 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/shelf" routerLinkActive="active">My SeedShelf</a>
-      <a class="nav-item nav-link" routerLink="/search" routerLinkActive="active">Global Library</a>
-      <a class="nav-item nav-link" routerLink="/login" routerLinkActive="active">Log Out</a>
-    </div>
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/shelf" routerLinkActive="active">My SeedShelf</a>
+    <a class="nav-item nav-link" routerLink="/search" routerLinkActive="active">Global Library</a>
+    <a class="nav-item nav-link" routerLink="/add" routerLinkActive="active">Submit a Record</a>
   </div>
+  <div class="navbar-nav ml-auto">
+    <a class="nav-item nav-link" routerLink="/login" routerLinkActive="active">Log Out</a>
+  </div>
+</div>
 </nav>
